--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     Dis is 4 givin $$$$ to tom n charlotte
 
-    I can haz your money
+    I can haz your money plz
 
     <a href=https://haveibeenpwned.com/>Send me money here<\a>
 
