--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <body>
-<h1> Tom n Charletttt <\h1>
+<h1> Tom n Charletttt </h1>
 
     Dis is 4 givin $$$$ to tom n charlotte
 
     I can haz your money plz
 
-    <a href=https://haveibeenpwned.com/>Send me money here<\a>
+    <a href=https://haveibeenpwned.com/>Send me money here</a>
 
 
-<\body>
+</body>
