--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <body>
 <h1> Tom n Charletttt</h1>
 
-    Dis is 4 givin $$$$ to tom n charlotte
+    <p>Dis is 4 givin $$$$ to tom n charlotte</p>
 
-    I can haz your money plz
+    <p>I can haz your money plz</p>
 
     <a href=https://haveibeenpwned.com/>Send me money here</a>
 
