--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <body>
 <h1> Tom n Charletttt</h1>
 
-    <p>Dis is 4 givin $$$$ to tom n charlotte</p>
+    <section>Dis is 4 givin $$$$ to tom n charlotte</section>
 
-    <p>I can haz your money plz</p>
+    <section>I can haz your money plz</section>
 
-    <p>
+    <section>
         <a href=https://haveibeenpwned.com/>Send me money here</a>
-    </p>
+    </section>
 
 
 </body>
